--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Lato:400,700/Inconsolata:400">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="icon" href="/assets/images/favicon.ico">
+    <script src="/assets/js/jquery.min.js" type="text/javascript"></script>
+    <script src="/assets/js/jquery.pjax.min.js" type="text/javascript"></script>
+    <script type="text/javascript">$(document).pjax('header>nav:first-of-type a, section a', 'section.container')</script>
 </head>
 <body>
 <header class="container">
