--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -13,7 +13,18 @@ body {
 
 input, textarea {
     display: block;
-    width: 300px;
+    width: 100%;
+    border: 1px solid #EEE;
+    padding: 5px 10px;
+    outline: none;
+    font-size: 10pt;
+    margin-bottom: 0.5rem;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+input[disabled], textarea[disabled] {
+    background: #EEE;
 }
 a {
     text-decoration: none;
